fix; fix unit tests with java >= 16
Unit tests fails with java >= 16 because handlebars is not
compatible yet with java 16.
See: https://github.com/jknack/handlebars.java/issues/667